[package]
name = "dist_trans"
description = "testing, data structures, algorithms for distributed systems"
version = "0.0.0"
authors = ["Tyler Neely <t@jujit.su>"]
license = "Apache-2.0"
homepage = "https://github.com/the-tetanus-clinic/rasputin"
keywords = ["database", "HA", "transactions", "distributed-systems", "paxos"]

[[test]]

name = "simulation"
path = "test/simulator.rs"

[dependencies]
mio = "0.5.1"
crdts = "1.2.10"
rocksdb = "0.4.1"
bytes = "0.3.0"
log = "0.3.6"
rand = "0.3.14"
time = "0.1.35"
uuid = "0.1"
protobuf = "1.0.22"
threadpool = "0.1.4"

[dev-dependencies]
quickcheck = "0.2.27"
